# personal-chef-

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  generate_resume.py  jianli-代洋.docx  langgraph.json  pyproject.toml  railway.toml
app/: main.py
app/agents/: personal_chief.py
app/api/v1/: chat.py  oss.py
app/rag/: recipe_knowledge.py
app/rag/recipe/: chinese_recipes.json
app/static/: index.html
